[gd_scene load_steps=4 format=3 uid="uid://31pmxm8astsx"]

[ext_resource type="Script" path="res://Scripts/Menus/online_menu_screen.gd" id="1_p0ktx"]

[sub_resource type="LabelSettings" id="LabelSettings_8g57u"]
font_size = 69

[sub_resource type="Theme" id="Theme_ej3uh"]
default_font_size = 42

[node name="OnlineMenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0ktx")
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.0
offset_top = 46.0
offset_right = 191.0
offset_bottom = 141.0
grow_horizontal = 2
text = "Multiplayer"
label_settings = SubResource("LabelSettings_8g57u")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -33.0
offset_right = -201.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ej3uh")
text = "Back"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = -265.0
offset_right = 151.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Servers" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_ej3uh")
text = "Online Servers"

[node name="LoadGame" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_ej3uh")
text = "Load Game"

[node name="CreateNew" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_ej3uh")
text = "Create New"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Buttons/Servers" to="." method="_on_servers_pressed"]
[connection signal="pressed" from="Buttons/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Buttons/CreateNew" to="." method="_on_create_new_pressed"]
